--- a/index.html
+++ b/index.html
@@ -4,15 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Carlo Miguel Dy</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
+	<title>Carlo Miguel Dy</title>
+	<style>
+	body, html {
+    height: 100%;
+    color: white;
+    font-family: 'Fira Code', monospace;
+	}
+
+	.bg { 
+	/* The image used */
+	background-image: url("img/bg-img.jpg");
+	background-color: rgba(0, 0, 0, 0.7);
+	/* Full height */
+	height: 100%; 
+
+	/* Center and scale the image nicely */
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	}
+	hr {
+		background-color: white;	
+		width: 30%;
+		height: 1px;
+		border-radius: 30%;
+	}
+	#content {
+		background-color: rgba(0, 0, 0, 0.5);
+		border-radius: 3px;
+		padding-top: 10px;
+		padding-bottom: 15px;
+	}
+</style>
 </head>
-<body>
-    <div class="container">
-        <h1>Hey my name is, Carlo Miguel Dy.</h1>
-        <hr>
-        <p>I am a self-taught Web Developer.</p>
-    </div>
+<body class="bg">
+	<div class="container">
+		<div class="row text-center" style="padding-top: 10rem">
+			<div class="col-lg-12" id="content">
+				<span class="display-1">Carlo Miguel Dy</span>
+				<hr>
+				<p>I am a self-taught Fullstack Web Developer.</p>
+				<div>
+					<button class="btn btn-outline-light btn-lg">Let's Talk</button>
+				</div>
+			</div>
+		</div>
+	</div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
