Work in Progress

--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
 			<div class="col-lg-12" id="content">
 				<span class="display-1">Carlo Miguel Dy</span>
 				<hr>
-				<p>I am a self-taught Fullstack Web Developer.</p>
-				<div>
-					<button class="btn btn-outline-light btn-lg">Let's Talk</button>
-				</div>
+				<p>I am a self-taught Fullstack Laravel Developer</p>
+				<div class="mt-2 badge badge-warning"><h2>Website Work in Progress ...</h2></div>
 			</div>
 		</div>
 	</div>
