--- a/index.html
+++ b/index.html
@@ -9,43 +9,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/276f65f579.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 	<title>Carlo Miguel Dy</title>
-	<style>
-	body, html {
-		height: 100%;
-		/* font-family: 'Fira Code', monospace; */
-		font-family: 'Montserrat', sans-serif;
-		/* font-family: 'Playfair Display', serif; */
-	}
-
-	.bg { 
-		/* The image used */
-		background-image: url("img/bg-img.jpg");
-		/* Full height */
-		height: 100%; 
-
-		/* Center and scale the image nicely */
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-	.bg-2 {
-		background-color: #fff;
-	}
-	.overlay {
-		background-color: rgba(0, 0, 0, 0.5);
-		height: 100%;
-	}
-	hr {
-		background-color: red;	
-		width: 5%;
-		height: 1px;
-		border-radius: 10%;
-	}
-</style>
 </head>
 <body>
-	<div class="bg">
+	<div class="bg shadow">
 		<div class="overlay">
 			<div class="container">
 				<div class="row" style="margin-bottom: 10rem;"></div>
@@ -54,7 +22,7 @@
 						<div class="card-body text-white">
 							<h2 class="display-5">Hello my name is,</h2>
 							<h1 class="display-3">Carlo Miguel Dy</h1>
-							<p>I am a web developer from Philippines and currently living in Maigo, Lanao del Norte. I enjoy building web apps.</p>
+							<p>I am a Laravel Developer from Philippines and currently living in Maigo, Lanao del Norte. I enjoy building web apps.</p>
 							<h2>
 								<a href="https://github.com/carlomigueldy" class="text-white m-2" target="_blank"><i class="fab fa-github"></i></a>
 								<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="text-white m-2" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -68,9 +36,25 @@
 			</div>
 		</div>
 	</div>
-	<div class="bg-2 pt-5 pb-5">
+	<div class="bg-2">
 		<div class="container">
-			<div class="text-center mb-5"><h1>Specialization</h1></div>
+			<div class="row">
+				<div class="col">
+					<div class="about-me-head">
+						<p>About Me</p>
+					</div>
+				</div>
+				<div class="col">
+					<div class="about-me-content">
+						<p>I am an experienced Laravel Developer with a year of experience using PHP. Capable of building Content Management System web apps from scratch.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bg-3 pt-5 pb-5">
+		<div class="container">
+			<div class="text-center mb-5"><h1 class="text-white">What I Do</h1></div>
 			<div class="row">
 				<div class="col">
 					<div class="card-deck">
@@ -83,7 +67,7 @@
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I am capable of building Content Management Systems with user authentication & authorization. 
+									I build Content Management Systems from scratch that makes it highly customizable. 
 								</p>
 							</div>
 						</div>
@@ -96,7 +80,7 @@
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I am currently taking up a degree in Information Technology, focusing on Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institude of Technology</a>. I plan, design and implement Databases that are secured, maintainable and scalable.
+									I am currently taking up a degree in Information Technology, focusing on Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I plan, design and implement Databases that are secured, maintainable and scalable.
 								</p>
 							</div>
 						</div>
@@ -117,6 +101,9 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="bg-3">
+		Test
 	</div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
