--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<title>Carlo Miguel Dy</title>
 </head>
 <body>
-	<div class="bg shadow">
+	<div class="bg">
 		<div class="overlay">
 			<div class="container">
 				<div class="row" style="margin-bottom: 10rem;"></div>
@@ -22,7 +22,7 @@
 						<div class="card-body text-white">
 							<h2 class="display-5">Hello my name is,</h2>
 							<h1 class="display-3">Carlo Miguel Dy</h1>
-							<p>I am a Laravel Developer from Philippines and currently living in Maigo, Lanao del Norte. I enjoy building web apps.</p>
+							<p>I am self-taught Laravel Developer from Philippines.</p>
 							<h2>
 								<a href="https://github.com/carlomigueldy" class="text-white m-2" target="_blank"><i class="fab fa-github"></i></a>
 								<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="text-white m-2" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -36,17 +36,17 @@
 			</div>
 		</div>
 	</div>
-	<div class="bg-2">
+	<div class="bg-2 pt-5 pb-5">
 		<div class="container">
 			<div class="row">
-				<div class="col">
-					<div class="about-me-head">
+				<div class="col-sm-12 col-md-6 col-lg-6">
+					<div class="text-center about-me-head">
 						<p>About Me</p>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col-sm-12 col-md-6 col-lg-6">
 					<div class="about-me-content">
-						<p>I am an experienced Laravel Developer with a year of experience using PHP. Capable of building Content Management System web apps from scratch.</p>
+						<p>I am an experienced Laravel Developer with a year of experience in using PHP.</p>
 					</div>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I build Content Management Systems from scratch that makes it highly customizable. 
+									I build user-friendly Content Management Systems from scratch that makes it highly customizable. 
 								</p>
 							</div>
 						</div>
@@ -75,25 +75,12 @@
 							<div class="card-header text-center border-0">
 								<h4>
 									<div><i class="fas fa-database"></i></div>
-									<div>Database Design</div>
+									<div>Database Engineering & Design</div>
 								</h4>
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I am currently taking up a degree in Information Technology, focusing on Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I plan, design and implement Databases that are secured, maintainable and scalable.
-								</p>
-							</div>
-						</div>
-						<div class="card shadow border-0">
-							<div class="card-header text-center border-0">
-								<h4>
-									<div><i class="fas fa-ruler"></i></div>
-									<div>UI / UX Design</div>
-								</h4>
-							</div>
-							<div class="card-body">
-								<p class="card-text">
-									I am not a full pledged web designer but I am well aware of most of the design principles to make user-friendly interfaces.
+									I am a college undergraduate with a degree in Information Technology, focusing in Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I design and implement Relational Databases (MySQL, PostgreSQL, & SQLite) that are reliable, secured, scalable and maintanable.
 								</p>
 							</div>
 						</div>
@@ -102,8 +89,22 @@
 			</div>
 		</div>
 	</div>
-	<div class="bg-3">
-		Test
+	<div class="bg-4 pt-5 pb-5">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="text-center contact-me-head">
+						<p>Contact Me</p>
+					</div>
+				</div>
+				<div class="col">
+					<div class="text-center contact-me-info">
+						<p>carlomigueldy@gmail.com</p>
+						<p>+63 916 776 4350</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
