Grammar error fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="card-body text-white">
 							<h2 class="display-5">Hello my name is,</h2>
 							<h1 class="display-3">Carlo Miguel Dy</h1>
-							<p>I am self-taught Laravel Developer from Philippines.</p>
+							<p>I am self-taught Laravel Developer from the Philippines.</p>
 							<h2>
 								<a href="https://github.com/carlomigueldy" class="text-white m-2" target="_blank"><i class="fab fa-github"></i></a>
 								<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="text-white m-2" target="_blank"><i class="fab fa-linkedin"></i></a>
