--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<div class="row justify-content-center">
 					<div class="col align-self-center">
 						<div class="card-body text-white">
-							<h2 class="display-5">Hello my name is,</h2>
-							<h1 class="display-3">Carlo Miguel Dy</h1>
+							<h2 style="font-size: 3vw;">Hello my name is,</h2>
+							<h1 style="font-size: 6vw;">Carlo Miguel Dy</h1>
 							<p>I am self-taught Laravel Developer from the Philippines.</p>
 							<h2>
 								<a href="https://github.com/carlomigueldy" class="text-white m-2" target="_blank"><i class="fab fa-github"></i></a>
