--- a/index.html
+++ b/index.html
@@ -8,35 +8,42 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Blinker&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/276f65f579.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>Carlo Miguel Dy</title>
 </head>
 <body>
-	<div class="bg">
+	<div class="bg shadow-lg">
 		<div class="overlay">
 			<div class="container">
-				<div class="row" style="margin-bottom: 10rem;"></div>
+				<div class="row" style="margin-bottom: 3rem;"></div>
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<h1 class="text-danger" style="font-size: 200px">
+							<i class="fab fa-laravel"></i>
+						</h1>
+					</div>
+				</div>
 				<div class="row justify-content-center">
-					<div class="col align-self-center">
-						<div class="card-body text-white">
-							<h2 style="font-size: 3vw;">Hello my name is,</h2>
-							<h1 style="font-size: 6vw;">Carlo Miguel Dy</h1>
-							<p>I am self-taught Laravel Developer from the Philippines.</p>
-							<h2>
-								<a href="https://github.com/carlomigueldy" class="text-white m-2" target="_blank"><i class="fab fa-github"></i></a>
-								<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="text-white m-2" target="_blank"><i class="fab fa-linkedin"></i></a>
-								<a href="https://www.instagram.com/carlomigueldy/" class="text-white m-2" target="_blank"><i class="fab fa-instagram"></i></a>
-								<a href="https://www.facebook.com/polarixdy" class="text-white m-2" target="_blank"><i class="fab fa-facebook"></i></a>
-								<a href="https://twitter.com/CarloMiguelDy" class="text-white m-2" target="_blank"><i class="fab fa-twitter"></i></a>
-							</h2>
+					<div class="col-sm-12 align-self-center">
+						<div class="card-body text-center text-white">
+							<h5>Hello my name is,</h5>
+							<h1 class="text-style display-4">Carlo Miguel Dy</h1>
+							<h6>
+								Dev Tools: HTML5, CSS, JavaScript, PHP, MySQL, PostgreSQL, SQLite, Laravel, Git, NPM 
+							</h6>
+							<button href="#" class="my-resume">My Resume</button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="bg-2 pt-5 pb-5">
+	<div class="bg-2 shadow-lg pt-5 pb-5">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-6">
@@ -46,19 +53,19 @@
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 					<div class="about-me-content">
-						<p>I am an experienced Laravel Developer with a year of experience in using PHP.</p>
+						<p>I am a college undergraduate with a degree in Information Technology, focusing in Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I am an experienced Laravel Developer with a year of experience in using PHP.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="bg-3 pt-5 pb-5">
+	<div class="bg-3 shadow-lg pt-5 pb-5">
 		<div class="container">
 			<div class="text-center mb-5"><h1 class="text-white">What I Do</h1></div>
 			<div class="row">
 				<div class="col">
 					<div class="card-deck">
-						<div class="card shadow border-0">
+						<div class="card shadow border-0 bg-dark text-white">
 							<div class="card-header text-center border-0">
 								<h4>
 									<div><i class="fas fa-code"></i></div>
@@ -67,20 +74,33 @@
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I build user-friendly Content Management Systems from scratch that makes it highly customizable. 
+									I build user-friendly web based apps from scratch that is tailored to your needs! 
 								</p>
 							</div>
 						</div>
-						<div class="card shadow border-0">
+						<div class="card shadow border-0 bg-dark text-white">
 							<div class="card-header text-center border-0">
 								<h4>
 									<div><i class="fas fa-database"></i></div>
-									<div>Database Engineering & Design</div>
+									<div>Database Design</div>
 								</h4>
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I am a college undergraduate with a degree in Information Technology, focusing in Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I design and implement Relational Databases (MySQL, PostgreSQL, & SQLite) that are reliable, secured, scalable and maintanable.
+									I design, implement, and maintain Relational Databases (MySQL, PostgreSQL, & SQLite) that are reliable, secured, scalable and maintanable.
+								</p>
+							</div>
+						</div>
+						<div class="card shadow border-0 bg-dark text-white">
+							<div class="card-header text-center border-0">
+								<h4>
+									<div><i class="fas fa-user"></i></div>
+									<div>Lorem, ipsum dolor.</div>
+								</h4>
+							</div>
+							<div class="card-body">
+								<p class="card-text">
+									Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda tenetur, ad eius quos in mollitia maxime et fugit qui fugiat.
 								</p>
 							</div>
 						</div>
@@ -89,7 +109,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="bg-4 pt-5 pb-5">
+	<div class="bg-4 shadow-lg pt-5 pb-5">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -102,6 +122,18 @@
 						<p>carlomigueldy@gmail.com</p>
 						<p>+63 916 776 4350</p>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col text-center">
+					<h1>Find Me</h1>
+					<h2 style="font-size: 5vw;">
+						<a href="https://github.com/carlomigueldy" class="m-3" target="_blank"><i class="fab fa-github"></i></a>
+						<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="m-3" target="_blank"><i class="fab fa-linkedin"></i></a>
+						<a href="https://www.instagram.com/carlomigueldy/" class="m-3" target="_blank"><i class="fab fa-instagram"></i></a>
+						<a href="https://www.facebook.com/polarixdy" class="m-3" target="_blank"><i class="fab fa-facebook"></i></a>
+						<a href="https://twitter.com/CarloMiguelDy" class="m-3" target="_blank"><i class="fab fa-twitter"></i></a>
+					</h2>
 				</div>
 			</div>
 		</div>
