Changed from vw to px

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<div class="row">
 				<div class="col text-center">
 					<h1>Find Me</h1>
-					<h2 style="font-size: 5vw;">
+					<h2 style="font-size: 50px;">
 						<a href="https://github.com/carlomigueldy" class="m-3" target="_blank"><i class="fab fa-github"></i></a>
 						<a href="https://www.linkedin.com/in/carlo-miguel-dy-168797181/" class="m-3" target="_blank"><i class="fab fa-linkedin"></i></a>
 						<a href="https://www.instagram.com/carlomigueldy/" class="m-3" target="_blank"><i class="fab fa-instagram"></i></a>
