A little bit of content update

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 						<div class="card-body text-center text-white">
 							<h5>Hello my name is,</h5>
 							<h1 class="text-style display-4">Carlo Miguel Dy</h1>
-							<h6>
-								Dev Tools: HTML5, CSS, JavaScript, PHP, MySQL, PostgreSQL, SQLite, Laravel, Git, NPM 
-							</h6>
 							<button href="#" class="my-resume">My Resume</button>
 						</div>
 					</div>
@@ -53,7 +50,10 @@
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 					<div class="about-me-content">
-						<p>I am a college undergraduate with a degree in Information Technology, focusing in Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. I am an experienced Laravel Developer with a year of experience in using PHP.</p>
+						<p>I am a 22 year old college undergraduate and in my last year in university with a degree in Information Technology, 
+							focusing in Database Systems at <a href="https://msuiit.edu.ph/" target="_blank">Mindanao State University - Iligan Institute of Technology</a>. 
+							I am an experienced Laravel Developer with a year of experience in using PHP and that I've built lots of personal & school projects with it.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -64,38 +64,38 @@
 			<div class="text-center mb-5"><h1 class="text-white">What I Do</h1></div>
 			<div class="row">
 				<div class="col">
-					<div class="card-deck">
+					<div class="card-deck text-center">
 						<div class="card shadow border-0 bg-dark text-white">
 							<div class="card-header text-center border-0">
 								<h4>
-									<div><i class="fas fa-code"></i></div>
+									<div><h1><i class="fas fa-code"></i></h1></div>
 									<div>Web Development</div>
 								</h4>
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I build user-friendly web based apps from scratch that is tailored to your needs! 
+									I build simple and user-friendly web applications using Laravel, all the way from scratch that is tailored to your needs! 
 								</p>
 							</div>
 						</div>
 						<div class="card shadow border-0 bg-dark text-white">
 							<div class="card-header text-center border-0">
 								<h4>
-									<div><i class="fas fa-database"></i></div>
-									<div>Database Design</div>
+									<div><h1><i class="fas fa-database"></i></h1></div>
+									<div>Database Administration</div>
 								</h4>
 							</div>
 							<div class="card-body">
 								<p class="card-text">
-									I design, implement, and maintain Relational Databases (MySQL, PostgreSQL, & SQLite) that are reliable, secured, scalable and maintanable.
+									I design, implement, maintain, perform backups & restores, and implement authorization & authentication in Relational Databases like MySQL and PostgreSQL.
 								</p>
 							</div>
 						</div>
 						<div class="card shadow border-0 bg-dark text-white">
 							<div class="card-header text-center border-0">
 								<h4>
-									<div><i class="fas fa-user"></i></div>
-									<div>Lorem, ipsum dolor.</div>
+									<div><h1><i class="fas fa-user"></i></h1></div>
+									<div>Lorem Ipsum Dolor</div>
 								</h4>
 							</div>
 							<div class="card-body">
