New look and commented projects section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="row" style="margin-bottom: 3rem;"></div>
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1 class="text-danger" style="font-size: 200px">
+						<h1 class="text-danger" style="font-size: 15vw">
 							<i class="fab fa-laravel"></i>
 						</h1>
 					</div>
@@ -109,7 +109,35 @@
 			</div>
 		</div>
 	</div>
-	<div class="bg-4 shadow-lg pt-5 pb-5">
+	<div class="bg-4 shadow-lg">
+		<div class="overlay">
+			<div class="container">
+				<div class="row text-white text-center">
+					<div class="col">
+						<h1 style="font-size: 4vw; padding-top: 30px;">Plan. Design. Implement. Test. Debug. Maintain.</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="bg-5 pt-5 pb-5">
+		<div class="container">
+			<h1 class="text-center text-white mb-5">School/Personal Projects</h1>
+			<div class="row">
+				<div class="col d-flex justify-content-center">
+					<div class="card shadow bg-dark text-white border-0" style="width: 75%">
+						<div class="card-body">
+							<div class="row">
+								<div class="col">Image</div>
+								<div class="col">Content</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> -->
+	<div class="bg-footer shadow-lg pt-5 pb-5">
 		<div class="container">
 			<div class="row">
 				<div class="col">
