Added Parallax effect

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="card-body text-center text-white">
 							<h5>Hello my name is,</h5>
 							<h1 class="text-style display-4">Carlo Miguel Dy</h1>
-							<button href="#" class="my-resume">My Resume</button>
+							<button href="#" class="my-resume" style="outline: none;">My Resume</button>
 						</div>
 					</div>
 				</div>
